# renameosgb

./: CMakeLists.txt
include/: renameosgb.hpp
source/: main.cpp  renameosgb.cpp
